# project_barcode_to_img

./: .gitignore  README.md  img_analyzer.py  img_cutter.py  img_url2cv2.py  main.py  pre_processing.py  pyproject.toml
