[tool.poetry]
name = "project-barcode-to-img"
version = "0.1.0"
description = "Project to recognize a barcode from a camera"
authors = ["gustavoDwsantos <gustavos200116@gmail.com>"]
readme = "README.md"
packages = [{include = "project_barcode_to_img"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.5.0"
requests = "^2.31.0"
pytesseract = "^0.3.10"
scikit-image = "^0.21.0"
pyzbar = {extras = ["scripts"], version = "^0.1.9"}
matplotlib = "^3.7.1"
opencv-contrib-python = "^4.8.0.74"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
